Fix error indicator alignment in the integrate tab

--- a/AzureFunctions.Client/styles/pop-over.style.css
+++ b/AzureFunctions.Client/styles/pop-over.style.css
@@ -49,7 +49,7 @@
 }
 
 .pop-over-input-error{
-    margin-left: -30px;
+    margin-left: -34px;
     position: absolute;
 }
 
